# secapi

./: LICENSE  README.md  example.py  project.toml  pyproject.toml
secapi/: __init__.py
secapi/filing_parsers/: __init__.py
secapi/filing_parsers/insiderParsers/: form4_parser.py
secapi/filing_parsers/insider_parsers/: form4_parser.py
secapi/filing_query/: __init__.py  constants.py  filing_query.py  sec_constants.py
secapi/util/: __init__.py  date_range.py  file_types.py  key_mapper.py  request_limiter.py  time_range.py
secapi/util/date/: date_range.py
secapi/util/daterange/: date_range.py  range_borders.py
secapi/util/filetypes/: file_types.py
secapi/util/keymapper/: key_mapper.py
src/SECapi/: key_mapper.py
src/sec-py/: filing_query.py
src/secAPI/: filing_query.py  key_mapper.py
src/sec_py/: filing_query.py  key_mapper.py
src/secapi/: __init__.py  filing_query.py  key_mapper.py  request.py
src/secapi_tl/: __init__.py  filing.py  filing_query.py  key_mapper.py  request.py  submission.py  submission_query.py  utility_functions.py
testing/: form_types.py  main.py
testing/helper/: __init__.py  timer.py
testing/key_mapper_tests/: functional_test.py
testing/request_get_submissions_test/: datalimit_test.py  functional_test.py  get_submissions_stress_test.py  is_registered_sterss_test.py  stress_test.py
testing/request_tests/: functional_test.py  get_filings_stress_test.py  stress_test.py
testing/resources/: SP500tickers.csv
testing/test_filing_query/: test_filing_query.py
testing/test_request/: test_threading.py
(+14 files in other folders)
