# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edgar-api"
version = "1.0.0"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=2.7.18"

dependencies = ["typing",
    "ratelimiter",
    "requests",
    "openDateRange",
    "python >= 2.7.18"]

[project.urls]
Homepage = "https://github.com/tlie03/SECapi"