# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secapi-tl"
version = "1.1.6"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=2.7.18"

dependencies = ["typing",
    "ratelimiter",
    "requests",
    "openDateRange", ]

[project.urls]
Homepage = "https://github.com/tlie03/secapi"